# ransomsim-framework

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
api/: database.py  main.py  models.py
api/routes/: alerts.py  patients.py  simulation.py  vulnerable.py
api/services/: db_init.py  patient_service.py
caldera/: docker-compose.yml
caldera/abilities/: discovery.yml
caldera/abilities/collection/: collection-dump-db.yml
caldera/abilities/discovery/: discovery-enum-api.yml
caldera/abilities/exfiltration/: exfil-c2-channel.yml
caldera/abilities/impact/: impact-sim-encrypt.yml
caldera/abilities/initial-access/: initial-access-brute-ssh.yml  initial-access-exploit-api.yml
caldera/abilities/persistence/: persist-cron-backdoor.yml
caldera/abilities/reconnaissance/: recon-nmap-scan.yml  recon-vuln-scan.yml
caldera/adversaries/: a1b2c3d4-e5f6-7890-abcd-ef1234567890.yaml  a1b2c3d4-e5f6-7890-abcd-ef1234567890.yml  healthcare_ransomware.json
caldera/conf/: local.yml
caldera/sources/: 41db0276-f06c-4e7b-9100-24ca5407f15c.yml  43052f69-3680-45a4-8212-729b3e330225.yml  948c30fb-4194-44b3-8671-e3fd462b5a46.yml  98782ce3-d880-48cb-9386-613e43d67c87.yml  e9ff5b68-9430-4443-8d7d-209add18f269.yml  healthcare-lab.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: config.ts  (+1 more)
infra/: docker-compose.blue.yaml  docker-compose.full-sim.yaml  docker-compose.red.yaml  docker-compose.yaml
infra/nginx/: nginx.conf
infra/suricata/: entrypoint.sh  suricata.yaml
resources/: data.py
(+9 files in other folders)
