[project]
name = "ransomsim-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "click==8.3.3",
    "fastapi==0.136.0",
    "greenlet==3.4.0",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.13",
    "loguru>=0.7.3",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlalchemy==2.0.49",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.46.0",
    "websockets>=16.0",
]
